# LY_Interpreter

./: CMakeLists.txt  README.md
include/LY_Interpreter/: input.h  stringmod.h
src/: input.cpp  main.cpp
